# Project1

./: README.md
ga1/: package.xml  setup.cfg  setup.py
ga1/ga1/: fk_node.py
rrbot_simulation_files/rrbot_description/gazebo/: rrbot.gazebo.xacro
rrbot_simulation_files/rrbot_description/urdf/: rrbot_description.urdf.xacro
rrbot_simulation_files/rrbot_gazebo/: CMakeLists.txt  package.xml  setup.py
rrbot_simulation_files/rrbot_gazebo/config/: gazebo_controllers.yaml
rrbot_simulation_files/rrbot_gazebo/launch/: rrbot_world.launch.py
rrbot_simulation_files/rrbot_gazebo/src/: calculate_joints_client.cpp  calculate_joints_server.cpp  pd_contoller_client.py  pd_contoller_server.py
rrbot_simulation_files/rrbot_gazebo/srv/: CalculateEndEffectorVelocity.srv  CalculateJointVelocities.srv  CalculateJoints.srv  MoveToJointPositions.srv
rrbot_simulation_files/rrbot_python/: package.xml  setup.cfg  setup.py
rrbot_simulation_files/rrbot_python/rrbot_python/: pd_controller_client.py  pd_controller_server.py  pi_controller.py  velocities_server.py
